--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,15 @@
-asn1crypto==0.24.0
-certifi==2019.6.16
-chardet==3.0.4
-cryptography==2.1.4
-dnspython==1.15.0
-enum34==1.1.6
-idna==2.8
-ipaddress==1.0.17
-keyring==10.6.0
-keyrings.alt==3.0
-mysql-connector-python==2.1.6
-mysql-utilities==1.6.4
-paramiko==2.0.0
-pexpect==4.2.1
-pyasn1==0.4.2
-pycrypto==2.6.1
-pygobject==3.26.1
-pyodbc==4.0.17
-pysqlite==2.7.0
-pyxdg==0.25
-SecretStorage==2.3.1
-six==1.11.0
-urllib3==1.25.3
-youtube-dl==2019.9.1
+astroid==2.2.5
+autopep8==1.4.4
+Django==2.2.5
+django-crispy-forms==1.7.2
+isort==4.3.21
+lazy-object-proxy==1.4.2
+mccabe==0.6.1
+pkg-resources==0.0.0
+pycodestyle==2.5.0
+pylint==2.3.1
+pytz==2019.2
+six==1.12.0
+sqlparse==0.3.0
+typed-ast==1.4.0
+wrapt==1.11.2
