--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-crispy-forms==1.7.2
 isort==4.3.21
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
+Pillow==6.1.0
 pkg-resources==0.0.0
 pycodestyle==2.5.0
 pylint==2.3.1
