--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 astroid==2.2.5
 autopep8==1.4.4
+bleach==3.1.0
+bleach-whitelist==0.0.10
 Django==2.2.5
 django-crispy-forms==1.7.2
+django-markup==1.4.1
+docutils==0.15.2
+html5lib==1.0.1
 isort==4.3.21
 lazy-object-proxy==1.4.2
+Markdown==3.1.1
 mccabe==0.6.1
 Pillow==6.1.0
 pkg-resources==0.0.0
 pycodestyle==2.5.0
+Pygments==2.4.2
 pylint==2.3.1
+python-creole==1.3.2
 pytz==2019.2
 six==1.12.0
+smartypants==2.0.1
 sqlparse==0.3.0
+textile==3.0.4
 typed-ast==1.4.0
+webencodings==0.5.1
 wrapt==1.11.2
