--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bleach-whitelist==0.0.10
 Django==2.2.5
 django-crispy-forms==1.7.2
 django-markup==1.4.1
+django-markupfield==1.5.1
 docutils==0.15.2
 html5lib==1.0.1
 isort==4.3.21
