--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==2.2.5
 django-crispy-forms==1.7.2
 django-markup==1.4.1
 django-markupfield==1.5.1
+django-meta==1.5.2
 docutils==0.15.2
 html5lib==1.0.1
 isort==4.3.21
@@ -13,7 +14,6 @@ lazy-object-proxy==1.4.2
 Markdown==3.1.1
 mccabe==0.6.1
 Pillow==6.1.0
-# pkg-resources==0.0.0
 pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.3.1
