--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ lazy-object-proxy==1.4.2
 Markdown==3.1.1
 mccabe==0.6.1
 Pillow==6.1.0
-pkg-resources==0.0.0
+# pkg-resources==0.0.0
 py3-validate-email==0.2.0
 pycodestyle==2.5.0
 Pygments==2.4.2
