--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ autopep8==1.4.4
 bleach==3.1.0
 bleach-whitelist==0.0.10
 Django==2.2.5
+django-ckeditor==5.8.0
 django-crispy-forms==1.7.2
+django-js-asset==1.2.2
 django-markup==1.4.1
 django-markupfield==1.5.1
 django-meta==1.5.2
@@ -16,7 +18,7 @@ lazy-object-proxy==1.4.2
 Markdown==3.1.1
 mccabe==0.6.1
 Pillow==6.1.0
-# pkg-resources==0.0.0
+pkg-resources==0.0.0
 py3-validate-email==0.2.0
 pycodestyle==2.5.0
 Pygments==2.4.2
