--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==19.3.0
 autopep8==1.4.4
 bleach==3.1.0
 bleach-whitelist==0.0.10
+certifi==2019.11.28
 coverage==5.0
 Django==2.2.5
 django-ckeditor==5.8.0
@@ -39,11 +40,13 @@ pytest-cov==2.8.1
 pytest-django==3.7.0
 python-creole==1.3.2
 pytz==2019.2
+sentry-sdk==0.13.5
 six==1.12.0
 smartypants==2.0.1
 sqlparse==0.3.0
 textile==3.0.4
 typed-ast==1.4.0
+urllib3==1.25.7
 wcwidth==0.1.7
 webencodings==0.5.1
 wmctrl==0.3
