--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage==5.0
 Django==2.2.5
 django-ckeditor==5.8.0
 django-crispy-forms==1.7.2
+django-debug-toolbar==2.1
 django-hitcount==1.3.1
 django-js-asset==1.2.2
 django-markup==1.4.1
