--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ py3-validate-email==0.2.0
 pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.3.1
+pylint-django==2.0.13
+pylint-plugin-utils==0.6
 pyparsing==2.4.5
 pytest==5.3.2
 pytest-cov==2.8.1
