--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ lazy-object-proxy==1.4.2
 Markdown==3.1.1
 mccabe==0.6.1
 more-itertools==8.0.2
+mysqlclient==1.4.6
 packaging==19.2
 pdbpp==0.10.2
 Pillow==6.1.0
