--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-js-asset==1.2.2
 django-markup==1.4.1
 django-markupfield==1.5.1
 django-meta==1.5.2
+django-taggit==1.2.0
 dnspython==1.16.0
 docutils==0.15.2
 fancycompleter==0.8
