--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-markup==1.4.1
 django-markupfield==1.5.1
 django-meta==1.5.2
 django-taggit==1.2.0
+django-taggit-autosuggest==0.3.8
 dnspython==1.16.0
 docutils==0.15.2
 fancycompleter==0.8
