--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,26 +13,23 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8]
-
+        python-version: [3.6]
+        
     steps:
     - uses: actions/checkout@v2
+    - name: Python Syntax Checker
+      uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Pyflakes Syntax Checker
-      uses: lgeiger/pyflakes-action@v1.0.1
     - name: ESLint Action
       uses: hallee/eslint-action@1.0.1
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Migrate the changes to database
-      run: |
-        python manage.py migrations
     - name: Run Tests
       run: |
         python manage.py test
