Add Github action workflow file for deployment and rename existing workflow file

--- a/.github/workflows/hackadda.yml
+++ b/.github/workflows/hackadda.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: HackAdda CI
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.6]
-        
+
     steps:
     - uses: actions/checkout@v2
     - name: Python Syntax Checker
