--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,6 @@ jobs:
         USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
-        script: bash ${{ secrets.DEPLOY_SCRIPT_LOC }}
+        script: |
+          bash ${{ secrets.DEPLOY_SCRIPT_LOC }}
+          logout
