--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: CD for HackAdda
+name: Continous Deployment for HackAdda
 
 on:
   push:
@@ -19,4 +19,4 @@ jobs:
         KEY: ${{ secrets.SSHKEY }}
         script: |
           bash ${{ secrets.DEPLOY_SCRIPT_LOC }}
-          logout
+          exit
