--- a/.github/workflows/hackadda.yml
+++ b/.github/workflows/hackadda.yml
@@ -2,7 +2,7 @@ name: HackAdda CI
 
 on:
   push:
-    branches: [ master dev ]
+    branches: [ master, dev ]
   pull_request:
     branches: [ master ]
 
