--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 astroid==2.2.5
 attrs==19.3.0
 autopep8==1.4.4
-bleach==3.1.4
+bleach==3.1.1
 bleach-whitelist==0.0.10
 certifi==2019.11.28
 coverage==5.0
-Django==2.2.13
+Django==2.2.10
 django-ckeditor==5.8.0
+django-comments-dab==1.6.7
 django-crispy-forms==1.7.2
 django-debug-toolbar==2.1
 django-extensions==2.2.9
@@ -32,7 +33,7 @@ mysqlclient==1.4.6
 packaging==19.2
 pdbpp==0.10.2
 Pillow==6.2.0
-# pkg-resources==0.0.0
+pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.8.0
 py3-validate-email==0.2.0
