--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,31 @@
+asgiref==3.2.10
 astroid==2.2.5
 attrs==19.3.0
 autopep8==1.4.4
-bleach==3.1.4
+bleach==3.1.1
 bleach-whitelist==0.0.10
 certifi==2019.11.28
 coverage==5.0
-Django==2.2.13
+Django==3.0.8
 django-ckeditor==5.8.0
 django-comments-dab==1.6.7
-django-crispy-forms==1.7.2
+django-crispy-forms==1.9.2
 django-debug-toolbar==2.1
+django-etc==1.2.0
 django-extensions==2.2.9
-django-hitcount==1.3.0
+django-hitcount==1.3.3
 django-js-asset==1.2.2
 django-markup==1.4.1
-django-markupfield==1.5.1
-django-meta==1.5.2
+django-markupfield==2.0.0
+django-meta==1.7.0
 django-taggit==1.2.0
 django-taggit-autosuggest==0.3.8
+django-webp==2.0.0
 dnspython==1.16.0
 docutils==0.15.2
 fancycompleter==0.8
 html5lib==1.0.1
+httpagentparser==1.9.0
 idna==2.8
 importlib-metadata==1.3.0
 isort==4.3.21
@@ -32,7 +36,7 @@ more-itertools==8.0.2
 mysqlclient==1.4.6
 packaging==19.2
 pdbpp==0.10.2
-Pillow==6.2.0
+Pillow==7.2.0
 pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.8.0
@@ -49,7 +53,7 @@ pytest-django==3.7.0
 python-creole==1.3.2
 pytz==2019.2
 sentry-sdk==0.13.5
-six==1.12.0
+six==1.15.0
 smartypants==2.0.1
 sqlparse==0.3.0
 textile==3.0.4
