--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ mysqlclient==1.4.6
 packaging==19.2
 pdbpp==0.10.2
 Pillow==7.2.0
-pkg-resources==0.0.0
+# pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.8.0
 py3-validate-email==0.2.0
