--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.2.10
 astroid==2.2.5
 attrs==19.3.0
 autopep8==1.4.4
-bleach==3.1.4
+bleach==3.1.1
 bleach-whitelist==0.0.10
 certifi==2019.11.28
 coverage==5.0
@@ -18,6 +18,10 @@ django-js-asset==1.2.2
 django-markup==1.4.1
 django-markupfield==2.0.0
 django-meta==1.7.0
+django-taggit==1.2.0
+django-taggit-autosuggest==0.3.8
+django-webp==2.0.0
+dnspython==1.16.0
 docutils==0.15.2
 fancycompleter==0.8
 html5lib==1.0.1
