--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/base.txt
+        pip install -r requirements/dev.txt
     - name: Run Tests
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
