--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,8 @@ extend-ignore =
 [isort]
 known_first_party = Blog, Users, Track, Subscribers
 combine_as_imports = true
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = blog.settings
+# Standard pytest options
+addopts = -p no:warnings --reuse-db
