fix: 🐛 set_trending_score function in the post model
- 🚨 add tests for it too.

⚡️ Improve performance for HomeView

- 🚨 Add some tests for it too.

✨ Add a decorator for views that require AJAX requests.

- handles warning for deprecation in django4.0

✨ Order recommended post by their trending score.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@
 # VS Code Directory #
 ########################
 *.vscode
+*.swp
+
+# venv
+venv/
+.venv/
+
+# coverage
+.coverage
 
 # Cached Python Files #
 ########################
