--- a/setup.cfg
+++ b/setup.cfg
@@ -7,10 +7,21 @@ extend-ignore =
     E203, E231,
 
 [isort]
-known_first_party = Blog, Users, Track, Subscribers
+known_first_party = Blog, Users, Subscribers
 combine_as_imports = true
+
+[coverage:run]
+branch = true
+source =
+    Blog
+    Subscribers
+    Users
+    blog
+omit =
+    *test*
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = blog.settings
-# Standard pytest options
-addopts = -p no:warnings --reuse-db
+addopts = -p no:doctest
+     --reuse-db
+     --cov-report term-missing:skip-covered
