fix: 🐛 Allow spaces in first name during registration
- add tests for them as well.

♻️  Move mixins to a separate module for user_profile app.

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,6 @@ omit =
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = blog.settings
-addopts = -p no:doctest
+addopts = -p no:warnings
      --reuse-db
      --cov-report term-missing:skip-covered
