ci: 👷 Speed up test run by 300%
- add a separate module for tests.

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ omit =
     *test*
 
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = blog.settings
+DJANGO_SETTINGS_MODULE = blog.settings.test
 addopts = -p no:warnings
      --reuse-db
      --cov-report term-missing:skip-covered
